k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume-screener-ns
  labels:
    name: resume-screener-ns
